--- a/common/common.scss
+++ b/common/common.scss
@@ -1,8 +1,8 @@
 // header
-.d-header-icons .icon:hover, .d-header-icons .icon:focus {
+.d-header-icons .icon:hover,
+.d-header-icons .icon:focus {
   background: transparent;
 }
-
 
 // List controls
 .list-controls .btn {
@@ -13,6 +13,7 @@
   background: $highlight;
   padding: 20px;
   border: 0px;
+  border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
 }
 
@@ -26,7 +27,8 @@
   line-height: 1.5;
   color: rgb(255, 255, 255);
   padding: 8px 15px;
-  background: linear-gradient(130deg, rgb(0, 180, 230), rgb(0, 240, 224)) transparent;
+  background: linear-gradient(130deg, rgb(0, 180, 230), rgb(0, 240, 224))
+    transparent;
   border-width: 0px;
   border-radius: 3px;
   outline: 0px;
@@ -38,8 +40,8 @@
 // Navigation bar
 #navigation-bar {
   width: auto;
-  display: flex!important;
-  
+  display: flex !important;
+
   li:first-child {
     border-radius: 3px 0 0 3px;
   }
@@ -71,7 +73,6 @@
   }
 }
 
-
 // Categories
 .category-list {
   border-collapse: separate;
@@ -100,13 +101,13 @@
     tr {
       border-bottom: 0px;
       th {
-        background: transparent
+        background: transparent;
       }
     }
   }
   tbody {
     border-top: 0px;
-    box-shadow: rgba(0,0,0,0.07) 0px 4px 6px 0px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
     td {
       background: $highlight;
     }
@@ -127,4 +128,29 @@
       }
     }
   }
+}
+
+// User view
+.nav-pills > li.active > a,
+.nav-pills > li > a.active {
+  letter-spacing: 0.5px;
+  font-size: 15px;
+  white-space: nowrap;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
+  line-height: 1.5;
+  color: rgb(255, 255, 255);
+  padding: 8px 15px;
+  background: linear-gradient(130deg, rgb(0, 180, 230), rgb(0, 240, 224))
+    transparent;
+  border-width: 0px;
+  border-radius: 3px;
+  outline: 0px;
+}
+
+.badge-card {
+  border-radius: 3px;
+  background-color: $highlight;
+  border: 0px solid transparent;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
 }
