--- a/common/common.scss
+++ b/common/common.scss
@@ -1,3 +1,8 @@
+// Font
+body {
+  font-family: 'HankenGroteskRegular', sans-serif;
+}
+
 // header
 .d-header-icons .icon:hover,
 .d-header-icons .icon:focus {
@@ -131,8 +136,8 @@
 }
 
 // User view
-.nav-pills > li.active > a,
-.nav-pills > li > a.active {
+.user-nav.nav-pills > li.active > a,
+.user-nav.nav-pills > li > a.active {
   letter-spacing: 0.5px;
   font-size: 15px;
   white-space: nowrap;
