--- a/common/common.scss
+++ b/common/common.scss
@@ -168,4 +168,10 @@ article div.row {
   background: $highlight;
   max-width: 772px;
   border-radius: 3px;
+  margin-bottom: 30px;
+  padding-left: 15px;
+}
+aside.onebox {
+  background: $love;
+  border: 0px solid transparent;
 }
