--- a/common/common.scss
+++ b/common/common.scss
@@ -15,13 +15,13 @@ body {
 // List controls
 .list-controls .btn {
   height: 38px;
-  border-radius: 3px;
+  border-radius: 6px;
 }
 .list-controls .combo-box .combo-box-header {
   background: $highlight;
   padding: 20px;
   border: 0px;
-  border-radius: 3px;
+  border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
 }
 
@@ -38,7 +38,7 @@ body {
   background: linear-gradient(130deg, rgb(0, 180, 230), rgb(0, 240, 224))
     transparent;
   border-width: 0px;
-  border-radius: 3px;
+  border-radius: 6px;
   outline: 0px;
   .d-icon {
     color: white;
@@ -51,10 +51,10 @@ body {
   display: flex !important;
 
   li:first-child {
-    border-radius: 3px 0 0 3px;
+    border-radius: 6px 0 0 6px;
   }
   li:last-child {
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 6px 6px 0;
     margin-right: -2px;
   }
   li {
@@ -98,8 +98,11 @@ body {
         background: $highlight;
         border-radius: 0 6px 6px 0;
       }
+      td:first-of-type {
+        padding-left: 30px;
+      }
       td {
-        padding: 12px 15px;
+        padding: 30px;
       }
     }
   }
@@ -111,6 +114,7 @@ body {
       border-bottom: 0px;
       th {
         background: transparent;
+        padding: 16px;
       }
     }
   }
@@ -119,6 +123,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
     td {
       background: $highlight;
+      padding: 16px;
     }
     tr:first-child {
       td:first-child {
@@ -153,12 +158,12 @@ body {
   background: linear-gradient(130deg, rgb(0, 180, 230), rgb(0, 240, 224))
     transparent;
   border-width: 0px;
-  border-radius: 3px;
+  border-radius: 6px;
   outline: 0px;
 }
 
 .badge-card {
-  border-radius: 3px;
+  border-radius: 6px;
   background-color: $highlight;
   border: 0px solid transparent;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
@@ -169,7 +174,7 @@ article div.row {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
   background: $highlight;
   max-width: 772px;
-  border-radius: 3px;
+  border-radius: 6px;
   margin-bottom: 30px;
   padding-left: 15px;
 }
@@ -203,13 +208,17 @@ nav.post-controls button.like:focus .d-icon {
   color: #f5a623 !important;
 }
 
-.badge-wrapper.bullet .badge-category-parent-bg,
-.badge-wrapper.bullet .badge-category-bg {
-  width: 3px;
-  height: 14px;
-  position: relative;
-  bottom: -4px;
+
+#topic-title {
+  .badge-wrapper.bullet .badge-category-parent-bg,
+  .badge-wrapper.bullet .badge-category-bg {
+    width: 3px;
+    height: 14px;
+    position: relative;
+    bottom: -4px;
+  }
 }
+
 
 // Post Icons
 .btn-flat .d-icon,
@@ -218,6 +227,12 @@ nav.post-controls button,
 nav.post-controls .like-button .like-count,
 .topic-meta-data .post-info a {
   color: #62829e;
+}
+
+span.post-count {
+  background: black;
+  color: #f9fafc;
+  opacity: 0.8;
 }
 
 // Text colors
