--- a/common/common.scss
+++ b/common/common.scss
@@ -275,6 +275,8 @@ aside.quote blockquote, blockquote {
   margin-left: -45px;
 
   .map {
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
+    border-top: 0px;
      li {
        padding: 7px 15px;
      }
