Topic map mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,5 +1,6 @@
 .topic-map {
-  max-width: calc(100% + 30px);
+  margin-left: 0;
+  max-width: 95%;
 
   ul {
     li:first-child, li:nth-child(2), li.avatars {
