--- a/common/common.scss
+++ b/common/common.scss
@@ -274,7 +274,9 @@ aside.quote blockquote, blockquote {
   border: 1px solid $love;
   margin-left: -45px;
   max-width: calc(100% + 30px);
-
+  .buttons {
+    display: none;
+  }
   .map {
     box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
     border-top: 0px;
