--- a/common/common.scss
+++ b/common/common.scss
@@ -373,9 +373,9 @@ blockquote {
 
 
 button.period-chooser-header, button.period-chooser-header:hover {
-  box-shadow: none;
-  line-height: 1.5;
-  opacity: 1;
+  box-shadow: none!important;
+  line-height: 1.5!important;
+  opacity: 1!important;
   h2 {
     font-size: 20px;
     .top-date-string {
