--- a/common/common.scss
+++ b/common/common.scss
@@ -412,6 +412,7 @@ button.period-chooser-header, button.period-chooser-header:hover {
 }
 nav.post-controls button {
   line-height: 1.5;
+  border-radius: 6px;
 }
 nav.post-controls button.d-hover, nav.post-controls button:focus {
   border-radius: 6px;
@@ -421,4 +422,127 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 }
 .timeline-container .topic-timeline .timeline-scrollarea {
   border-color: $tertiary;
+}
+#share-link {
+  border-radius: 6px;
+}
+
+// Footer
+.footer-section {
+  background-color: #f9fafc;
+  width: 100%;
+  padding: 30px 15px;
+  position: relative;
+  overflow-x: hidden;
+}
+.section-container {
+  max-width: 1100px;
+  width: 95%;
+  margin: auto;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: 16.66% 16.66% 16.66% 16.66% 33.32%;
+  grid-template-rows: auto;
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+}
+.footer-item.mobile-full {
+  grid-column-start: 1;
+  grid-column-end: inherit;
+  grid-column-start: inherit;
+}
+.footer-item a {
+  display: block;
+  font-family: "FontRegular", sans-serif;
+  font-size: 14px;
+  line-height: 3.14;
+  color: #7f8198;
+  cursor: pointer;
+  text-decoration: none;
+}
+.footer-item a:hover {
+  opacity: 0.8;
+}
+.footer-item p,
+.footer-item form {
+  font-family: "FontRegular", sans-serif;
+  font-size: 14px;
+  line-height: 3.14;
+  color: #7f8198;
+}
+.form-button {
+  margin-left: 15px;
+  opacity: 0.35;
+  border-radius: 3px;
+  background-image: linear-gradient(72deg, #00dbe2, #01bfe3);
+  color: white;
+  border: solid 0px transparent;
+  padding: 0 30px;
+  line-height: 2.4;
+  outline: none;
+  cursor: pointer;
+}
+.form-button:hover {
+  opacity: 0.8;
+}
+.footer-form {
+  height: 43px !important;
+  display: flex;
+  align-items: center;
+}
+.form-input {
+  line-height: 2;
+  border: solid 0px transparent;
+  border-bottom: solid 1px #d8d8d8;
+  background: transparent;
+  outline: none;
+}
+.footer-item-p {
+  font-size: 14px;
+  line-height: 3.14;
+  color: rgb(127, 129, 152);
+  margin: 0;
+}
+
+.footer-box {
+  margin: 0 -15px;
+  height: 43px;
+  display: flex;
+  align-items: center;
+}
+.footer-box a {
+  display: inline;
+  padding: 0 15px;
+  text-decoration: none;
+}
+.forum {
+  height: 19px;
+  width: 19px;
+}
+
+#footer_links a {
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#footer_links a:hover {
+  color: black;
+  box-shadow: black 0 -1px 0 inset;
+}
+.collection-cards {
+  flex: 1 1 400px;
+}
+
+.post-card.post.featured {
+  flex: 1 1 100%;
+}
+
+.featured-feed > .post-card.post.featured ~ .post-card.post.featured {
+  flex: 1 1 300px;
+}
+.featured-posts-container article:nth-child(2) .post-card-image {
+  min-height: 350px;
 }
