--- a/common/common.scss
+++ b/common/common.scss
@@ -499,9 +499,11 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
   border-top: 0!important;
   border-left: 0!important;
   border-right: 0!important;
-  border-bottom: solid 1px #d8d8d8!important;
+  border-bottom: solid 1px #7f819880 !important;
   background: transparent;
   outline: none;
+  padding-left: 0!important;
+  box-shadow: none!important;
 }
 .footer-item-p {
   font-size: 14px;
@@ -559,4 +561,10 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
     grid-column-start: 1 !important;
     grid-column-end: 4 !important;
   }
+}
+
+
+// Hero
+.hero {
+  background: #121317;
 }
