--- a/common/common.scss
+++ b/common/common.scss
@@ -429,7 +429,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 
 // Footer
 .footer-section {
-  background-color: $secondary;
+  background-color: #f9fafc;
   width: 100%;
   padding: 30px 15px;
   position: relative;
