--- a/common/common.scss
+++ b/common/common.scss
@@ -499,7 +499,6 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
   border-top: 0!important;
   border-left: 0!important;
   border-right: 0!important;
-  
   border-bottom: solid 1px #d8d8d8!important;
   background: transparent;
   outline: none;
@@ -568,9 +567,24 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
     margin-top: 83px;
   }
   h1 {
-    font-family: "HankenGroteskRegular", sans-serif;
-    line-height: 56px;
-    font-size: 42px;
-    color: #FFFFFF;
+    display: none;
+  }
+}
+
+.hero-container {
+  min-height: 290px;
+}
+
+
+
+@media (min-width: 780px) {
+  .hero {
+    h1 {
+      display: block;
+      font-family: "HankenGroteskRegular", sans-serif;
+      line-height: 56px;
+      font-size: 42px;
+      color: #FFFFFF;
+    }
   }
 }
