--- a/common/common.scss
+++ b/common/common.scss
@@ -429,7 +429,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 
 // Footer
 .footer-section {
-  background-color: $secondary;
+  background-color: $header-primary;
   width: 100%;
   padding: 30px 15px;
   position: relative;
@@ -553,7 +553,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 
 // Hero
 .hero {
-  background: #0B1018;
+  background: #0D131E;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -585,6 +585,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
       font-family: "HKGroteskLight", "HankenGroteskRegular", sans-serif;
       line-height: 56px;
       font-size: 42px;
+      font-weight: 100;
       color: #FFFFFF;
     }
   }
