--- a/common/common.scss
+++ b/common/common.scss
@@ -435,6 +435,9 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
   position: relative;
   overflow-x: hidden;
 }
+.footer-section input {
+  background: transparent;
+}
 .section-container {
   max-width: 1100px;
   width: 95%;
@@ -565,6 +568,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
   overflow: hidden;
   img {
     margin-top: 83px;
+    overflow: hidden;
   }
   h1 {
     display: none;
