Hero title left aligned

--- a/common/common.scss
+++ b/common/common.scss
@@ -604,6 +604,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
       color: #FFFFFF;
       transform: none;
       position: inherit;
+      text-align: left;
     }
   }
 }
