--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -14,3 +14,20 @@ article div.row {
 body {
   overflow: hidden;
 }
+
+
+.category-list-item.category {
+  border-bottom: 0px;
+  border-top: 0px;
+  margin: 30px 10px;
+  background: white;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
+}
+
+
+#navigation-bar {
+  li:first-child, li,  li:last-child{
+    border-radius: 6px;
+  }
+}
