--- a/common/common.scss
+++ b/common/common.scss
@@ -612,3 +612,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 .wrap {
   max-width: 1052px;
 }
+
+.embedded-posts .topic-avatar {
+  padding-left: 0;
+}
