Topic title color on navbar

--- a/common/common.scss
+++ b/common/common.scss
@@ -623,3 +623,7 @@ nav.post-controls button.d-hover, nav.post-controls button:focus {
 body[class*="archetype-"] .hero-container, body[class*="archetype-"] .hero {
     display: none;
 }
+
+.extra-info-wrapper .topic-link {
+  color: white;
+}
