--- a/common/common.scss
+++ b/common/common.scss
@@ -362,6 +362,14 @@ blockquote {
   outline: none;
 }
 
+// Alerts
+.alert.alert-info {
+  background-color: lighten($tertiary, 40%);
+  opacity: 0.8;
+  color: $primary;
+  border-radius: 6px;
+}
+
 // Time selector
 .select-kit.dropdown-select-box.period-chooser
   .period-chooser-row
