--- a/common/common.scss
+++ b/common/common.scss
@@ -692,7 +692,7 @@ a.title:visited:not(.badge-notification),
 }
 
 a.mention, a.mention-group {
-  color:; $tertiary
+  color: $tertiary;
 }
 .names .new_user a, .names .user-title, .names .user-title a {
   color: $primary;
