Reduce category badge width

--- a/common/common.scss
+++ b/common/common.scss
@@ -707,3 +707,8 @@ a.mention, a.mention-group {
   color: $header_background;
   background-color: $quaternary;
 }
+
+.badge-wrapper.bar .badge-category-bg {
+  width: 4px;
+  margin-right: 2px;
+}
