Topic title margins

--- a/common/common.scss
+++ b/common/common.scss
@@ -712,3 +712,11 @@ a.mention, a.mention-group {
   width: 4px;
   margin-right: 2px;
 }
+
+.badge-wrapper.bar .badge-category-parent-bg {
+  width: 4px;
+}
+
+#topic-title .title-wrapper {
+  margin-bottom: 30px;
+}
